# TF-OVS

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: benchmark.yaml  local_paths.example.yaml
configs/methods/: cass.yaml  clip_diy.yaml  cliptrase.yaml  corrclip.yaml  debug_copy_gt.yaml  debug_empty.yaml  dinov2_sam_clip.yaml  dinov2_sam_clip_mcc.yaml  dinov2_sam_siglip.yaml  freeda.yaml  groundingdino_sam.yaml  groundingdino_sam2.yaml  maskclip.yaml  naclip.yaml  odise_ref.yaml  ovdiff.yaml  ovseg_ref.yaml  proxyclip.yaml  resclip.yaml  sam_amg_clip.yaml  sam_amg_siglip.yaml  san_ref.yaml  sc_clip.yaml  sclip.yaml  trident.yaml
configs/vocab/: ade20k_150.txt  coco_stuff_171.txt  context_459.txt  context_59.txt  ovcamo_75.txt  (+2 more)
scripts/: analyze_official_results.py  build_alias_collapse_decomposition.py  build_e2_filled_table.py  convert_san_rle_predictions.py  dl_ade20k.sh  dl_coco_stuff.sh  dl_context.sh  dl_voc20.sh  download_ovdiff_sd15.sh  generate_diagnostic_tables.py  generate_exploratory_light_metrics.py  make_qualitative_grid.py  maskclip_mmcv_compat.py  mmcv_ops_lite_init.py  postprocess_official_predictions.py  pre_gpu_check.sh  prepare_manifests.py  prepare_official_e2_configs.py  prepare_official_maskclip_configs.py  prepare_official_mmseg_configs.py  prepare_official_voc20_officialnames_configs.py  prepare_scclip_configs.py  prepare_trident_cass_configs.py  prepare_workspace.sh  run_with_pillow_compat.py  smoke_test.py
tests/: test_check_ready.py  test_make_ade20k_manifest.py  test_metrics.py  test_pipeline_cli.py
(+22 files in other folders)
