[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "training-free-open-vocabulary-segmentation"
version = "0.1.0"
description = "Reproducibility harness for training-free open-vocabulary segmentation"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "pillow>=9.5",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.5"]
tables = ["pandas>=2.0"]
clip = ["torch>=2.0", "torchvision", "open_clip_torch>=3.0"]

[tool.setuptools.packages.find]
where = ["src"]
